Auto-refactor assorted Java lint (#7660)
#### Rationale
Warnings can cover up important code quality issues.

#### Changes
- SequencedCollections: `get(0)` -> `getFirst()`, etc
- Add missing `@NotNull`/`@Nullable`
- Simplify test assertions
- Map operation simplification
- Remove redundant throws clause
- Switch to parameterized log message
- C-style array -> Java-style array declaration
- Delete overridden methods identical to parent
- Switch statement -> enhanced switch statement
- Remove redundant imports

#### Tasks 📍
-  [x] Claude Code Review
- ~Manual Testing~
- ~Test Automation~