@@ -771,10 +771,10 @@ public class ExpDataClassDataTableImpl extends ExpRunItemTableImpl<ExpDataClassD
                 url.addParameter("excludeColumn", excludeKey);
             url.addParameter("excludeColumn", "Flag");
             url.addParameter("filenamePrefix", this.getName());
-            if (templates.get(0).first.equals(DOWNLOAD_TEMPLATE_LABEL))
+            if (templates.getFirst().first.equals(DOWNLOAD_TEMPLATE_LABEL))
                 templates.set(0, Pair.of(DOWNLOAD_TEMPLATE_LABEL, url.toString()));
             else
-                templates.add(0, Pair.of(DOWNLOAD_TEMPLATE_LABEL, url.toString()));
+                templates.addFirst(Pair.of(DOWNLOAD_TEMPLATE_LABEL, url.toString()));
         }
 
 
@@ -1234,7 +1234,7 @@ public class ExpDataClassDataTableImpl extends ExpRunItemTableImpl<ExpDataClassD
         }
 
         @Override
-        public Map<String, Object> moveRows(User user, Container container, Container targetContainer, List<Map<String, Object>> rows, BatchValidationException errors, @Nullable Map<Enum, Object> configParameters, @Nullable Map<String, Object> extraScriptContext) throws InvalidKeyException, BatchValidationException, QueryUpdateServiceException, SQLException
+        public Map<String, Object> moveRows(User user, Container container, Container targetContainer, List<Map<String, Object>> rows, BatchValidationException errors, @Nullable Map<Enum, Object> configParameters, @Nullable Map<String, Object> extraScriptContext) throws BatchValidationException, QueryUpdateServiceException
         {
             Map<String, Integer> allContainerResponse = new HashMap<>();
 
@@ -1454,7 +1454,7 @@ public class ExpDataClassDataTableImpl extends ExpRunItemTableImpl<ExpDataClassD
         }
 
         @Override
-        public List<Map<String, Object>> updateRows(User user, Container container, List<Map<String, Object>> rows, List<Map<String, Object>> oldKeys, BatchValidationException errors, @Nullable Map<Enum, Object> configParameters, Map<String, Object> extraScriptContext) throws InvalidKeyException, BatchValidationException, QueryUpdateServiceException, SQLException
+        public List<Map<String, Object>> updateRows(User user, Container container, List<Map<String, Object>> rows, List<Map<String, Object>> oldKeys, BatchValidationException errors, @Nullable Map<Enum, Object> configParameters, Map<String, Object> extraScriptContext) throws BatchValidationException
         {
             if (rows == null || rows.isEmpty())
                 return Collections.emptyList();
